--- a/app/src/main/res/layout/activity_splace_screen.xml
+++ b/app/src/main/res/layout/activity_splace_screen.xml
@@ -32,23 +32,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:theme="@style/ProgressBarThemeSplace"
-        android:layout_marginBottom="45dp"
+        android:layout_marginBottom="85dp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"/>
 
-
-   <!-- <TextView
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/progressBar_splash_screen"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="619dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="55dp"
         android:gravity="center"
-        android:textColor="@color/white">
+        android:text="Loading... please wait "
+        android:textAlignment="center"
+        android:textColor="@color/white" />
 
-    </TextView>
 
--->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:textSize="12dp"
+        android:text="Created By Will_Dev "
+        android:textAlignment="center"
+        android:textColor="@color/white" />
 
 
 </RelativeLayout>
