--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -21,6 +21,30 @@
             android:layout_height="230dp"
             android:layout_centerInParent="true"/>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="80dp"
+            android:gravity="center"
+            android:text="Loading... please wait "
+            android:textAlignment="center"
+            android:textColor="@color/white" />
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:textSize="12dp"
+            android:text="Created By Will_Dev "
+            android:textAlignment="center"
+            android:textColor="@color/white" />
+
 
 
     </RelativeLayout>
